chore: migrating code and build to java 11 and up